split up main js file into smaller classes files

--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
   </head>
 
   <body>
+    <script src="classes_folder\Enemy.js"></script>
+    <script src="classes_folder\Projectile.js"></script>
+    <script src="classes_folder\Tower.js"></script>
     <script src="sketch.js"></script>
   </body>
 </html>
