--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     <script src="classes_folder\Enemy.js"></script>
     <script src="classes_folder\Projectile.js"></script>
     <script src="classes_folder\Tower.js"></script>
+    <script src="classes_folder\Map.js"></script>
     <script src="sketch.js"></script>
   </body>
 </html>
