--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 
     <script src="libraries/p5.sound.min.js"></script>
     <script src="libraries/p5.collide2d.min.js"></script>
+    <script src="libraries/p5.touchgui.js"></script>
   </head>
 
   <body>
@@ -28,6 +29,7 @@
     <script src="classes_folder\Projectile.js"></script>
     <script src="classes_folder\Tower.js"></script>
     <script src="classes_folder\Map.js"></script>
+    <script src="classes_folder\UI.js"></script>
     <script src="sketch.js"></script>
   </body>
 </html>
